--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Homework 2 Solution</title>
 
     <script src="https://d3js.org/d3.v5.js"></script>
-    <script src="js/script.js"></script>
+    <script src="code/js/script.js"></script>
     <!--<script src="js/Tree.js"></script>
     <script src="js/Node.js"></script>-->
 </head>
