index page update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Homework 2 Solution</title>
+    <title>Formula 1 Stats</title>
 
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="code/js/script.js"></script>
@@ -11,11 +11,6 @@
     <script src="js/Node.js"></script>-->
 </head>
 <body>
-<div class="intro">
-    <h2>CS-5630 / CS-6630 Homework 2</h2>
-    <h3>Name: Harshini Keerthi Vasan</h3>
-    <h3>Email: <a href="mailto:u1136693@utah.edu">u1136693@utah.edu</a></h3>
-    <h3>uNID: u1136693</h3>
-</div>
+<p> Formula 1 index page </p>
 </body>
 </html>
