--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Formula 1 Stats</title>
 
-    <script src="https://d3js.org/d3.v5.js"></script>
-    <script src="code/js/script.js"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <script type="application/javascript" src="code/js/script.js"></script>
     <!--<script src="js/Tree.js"></script>
     <script src="js/Node.js"></script>-->
 </head>
