--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
 
     <meta charset="UTF-8">
     <title>Formula 1 Stats</title>
+    <link rel="stylesheet" href="code/css/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <script src="https://d3js.org/d3.v5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.js"></script>
+   <script src="https://d3js.org/d3-geo-projection.v2.js"></script>
+     <script src="http://d3js.org/topojson.v1.min.js"></script>
+           <script src="code/js/script.js" async></script>
+    <script src="code/js/map.js" async></script>
 
-    <script src="https://d3js.org/d3.v4.js"></script>
-    <script type="application/javascript" src="code/js/script.js"></script>
     <!--<script src="js/Tree.js"></script>
     <script src="js/Node.js"></script>-->
 </head>
 <body>
+
 <p> Formula 1 index page </p>
+<div class="wrapper">
+        <div class="innerWrapper">
+            <div id="map-chart" class="view"></div>
+            <div id="country-detail"></div>
+        </div>
+</div>
 </body>
 </html>
