--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-<p> Formula 1 index page </p>
 <div class="wrapper">
+    <h2> Formula 1 Stats </h2>
     <div class="innerWrapper">
         <div id="map-chart" class="view"></div>
         <div id="country-detail"></div>
