--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<meta charset="UTF-8">
-	<title>Formula 1 Stats</title>
+	<title>About</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="code/css/front.css">
+    <link rel="stylesheet" type="text/css" href="code/css/about.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script src="https://d3js.org/d3.v5.js"></script>
@@ -28,33 +29,22 @@
 			</div>
 			<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 				</ul>
 				<<ul class="nav navbar-nav navbar-right">
-					<li><a href="about.html">About</a></li>
+					<li class="active"><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div id="content">
-					<h1>Formula 1 Stats</h1>
-					<h3>Racing is life</h3>
-					<hr>
-					<button class="btn btn-default btn-lg"><i class="fas fa-flag-checkered"></i><a href="main.html" class="nounderline">Get Started</a></button>
-				</div>
-			</div>
-		</div>
-	</div>
-	</div>
+	<h3 id="content">Project by Harshini,Vinu,Sanjana</h3>
 	<script
   	src="http://code.jquery.com/jquery-2.1.4.js"
   	integrity="sha256-siFczlgw4jULnUICcdm9gjQPZkw/YPDqhQ9+nAOScE4="
   	crossorigin="anonymous"></script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
 </html>
