--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 
     <script src="code/js/script.js" async></script>
     <script src="code/js/map.js" async></script>
-    <script src="code/js/teams.js" async></script>
+    <script src="code/js/Teams.js" async></script>
 
 </head>
 <body>
