circuit and ui update

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 		       	 	<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
 		      	</button>
-				<a class="navbar-brand" href="#">Formula 1 Stats</a>
+				<!--<a class="navbar-brand" href="#">Formula 1 Stats</a>-->
 			</div>
 			<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
@@ -38,7 +38,17 @@
 			</div>
 		</div>
 	</nav>
-	<h3 id="content">Project by Harshini,Vinu,Sanjana</h3>
+	<h4 id="content">As ardent fans of Formula-1 Racing, the three of us, Vinu Sreenivasan, Harshini Keerthi Vasan and Sanjana Aravindan decided to visulaize and find out the best teams in the Formula-1 racing history. Formula-1 fandom has increased tremendously over the years, and the three of us have been lucky to witness the growth of players and teams from different parts of the world. We hope our project gives a good insight about the drivers, circuits and the best teams of Formula-1 racing. 
+	<br>
+	<br>
+
+To launch our visualization, simply click the home button on the navigation bar and click the get started button. <!--Select a player, to see his summary and ratings in different attributes, scroll through the timeline, and to compare the performance over the years with another player, search and select the player(s) from the list . The color codings help differentiate the players from one another, the color of the player name added and the line help relate the same player. When we wish to compare a lot of players and are interested in specific years rather than the while timeline, one can brush along the x-axis timeline and see the bar charts with more emphasis on the ratings for that particular attribute. Feel Free to add as many players as possible to the line chart and brush on the x-axis timeline to zoom into the specific years. Although a player has been performing really well in a specific attribute, he might be lagging other attributes of the game and that can be seen clearly in the bar charts. Hovering over the bars or the lines will show the details that are specific to the visualization and get more insights--></h4>
+
+<div class = "video">
+        <iframe width="73%" height="400" src="https://www.youtube.com/embed/CwiXTO2AIbk" frameborder="0" allowfullscreen></iframe>
+    </div>
+
+
 	<script
   	src="http://code.jquery.com/jquery-2.1.4.js"
   	integrity="sha256-siFczlgw4jULnUICcdm9gjQPZkw/YPDqhQ9+nAOScE4="
