--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 		       	 	<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
 		      	</button>
-				<a class="navbar-brand" href="#">Formula 1 Stats</a>
+				<!--<a class="navbar-brand" href="#">Formula 1 Stats</a>-->
 			</div>
 			<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
@@ -38,9 +38,21 @@
 			</div>
 		</div>
 	</nav>
-	<h3 id="content">Harshini : u1136693@utah.edu</h3>
-	<h3 id="content">Sanjana : u1136693@utah.edu</h3>
-	<h3 id="content">Vinu : u1136693@utah.edu</h3>
+	<h4 id="content">Harshini Keerthi Vasan</h4>
+	<p id="links">
+        <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/harshinikeerthivasan/">LinkedIn</a><br><br>
+        <a id="linkedin" target="_blank" href="mailto:u1136693@utah.edu">Email</a>
+    </p>
+	<h4 id="content">Sanjana Aravindan</h4>
+	<p id="links">
+        <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/sanjana-a-1b2956140/">LinkedIn</a><br><br>
+        <a id="linkedin" target="_blank" href="mailto:u1135274@utah.edu">Email</a>
+    </p>
+	<h4 id="content">Vinu Sreenivasan</h4>
+	<p id="links">
+        <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/vinu-sreenivasan/">LinkedIn</a><br><br>
+        <a id="linkedin" target="_blank" href="mailto:vinu.sreenivasan@utah.edu">Email</a>
+    </p>
 
 	<script
   	src="http://code.jquery.com/jquery-2.1.4.js"
