--- a/main.html
+++ b/main.html
@@ -4,6 +4,9 @@
 
     <meta charset="UTF-8">
     <title>Formula 1 Stats</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="code/css/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -26,9 +29,30 @@
 
 </head>
 <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!--<a class="navbar-brand" href="#">Formula 1 Stats</a>-->
+            </div>
+            <div class="collapse navbar-collapse" id="bs-nav-demo">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+                <<ul class="nav navbar-nav navbar-right">
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 <div class="tab">
-    <h2> Formula 1 Stats </h2>
     <button class="tablinks" id=defaultOpen onclick="openTab(event, 'Teams')">Teams</button>
     <button class="tablinks" onclick="openTab(event, 'Drivers')">Drivers</button>
     <button class="tablinks" onclick="openTab(event, 'Circuits')">Circuits</button>
@@ -83,9 +107,22 @@
 </div>
 
 <div id="Circuits" class="tabcontent">
+   <!-- <div id="map-select">
+            <button id="map-selectAll-btn" class="button"> All </button>
+    </div>
+     <div id="map-select">
+            <button id="map-select-btn" class="button"> Top Circuits </button>
+    </div>-->
+    <div class="map-select">
+    <button id=map-selectAll-btn>All Circuits</button>
+    <button id=map-select-btn>Top Circuits</button>
+    <!--<button class="tablinks" onclick="openTab(event, 'Drivers')">Drivers</button>
+    <button class="tablinks" onclick="openTab(event, 'Circuits')">Circuits</button>
+    <button class="tablinks" onclick="openTab(event, 'Demo')">Demo</button>-->
+</div>
     <div class="innerWrapper">
         <div id="map-chart" class="fullView"></div>
-        <div id="country-detail"></div>
+        <div id="table"></div>
     </div>
 </div>
 
