--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		       	 	<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
 		      	</button>
-				<a class="navbar-brand" href="#">Formula 1 Stats</a>
+				<!--<a class="navbar-brand" href="#">Formula 1 Stats</a>-->
 			</div>
 			<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
@@ -44,7 +44,7 @@
 					<h1>Formula 1 Stats</h1>
 					<h3>Racing is life</h3>
 					<hr>
-					<button class="btn btn-default btn-lg"><i class="fas fa-flag-checkered"></i><a href="main.html" class="nounderline">Get Started</a></button>
+					<button class="btn btn-default btn-lg"><i class="fas fa-flag-checkered"></i><a href="main.html" class="nounderline"> Get Started</a></button>
 				</div>
 			</div>
 		</div>
