--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
 
@@ -87,21 +88,20 @@
 
         <div id="driver-details">
             <svg width="300" height="300" id="image"></svg>
-            <svg width="350" height="300" id="details"></svg>
+            <svg width="1100" height="300" id="details"></svg>
         </div>
     </div>
 
     <div id="performance_years" class="view">
-        <select id="select2-search" name="state">
-            <option></option>
-        </select>
+        <span>Select driver for comparison</span>
+        <select id="select2-search"></select>
+        <span>Select attribute</span>
         <select id="attribute-search"></select>
         <svg  id="lineChart">
             <g id="xAxis"></g>
             <g id="yAxis"></g>
         </svg>
-        <div  id="selected-drivers">
-        </div>
+        <div  id="selected-drivers"></div>
     </div>
     <div id="performance_per_years" class="view"></div>
 </div>
