--- a/main.html
+++ b/main.html
@@ -65,8 +65,11 @@
         <h2>Click and drag the bar to select a range</h2>
         <div id="slider-container"></div>
         <div id="range-label">1970 - 1980</div>
-        <div id="bar-chart"></div>
-        <div id="info-box"></div>
+        <div id="bubble-chart"></div>
+        <div id="team-template" class="teamWrapper">
+            <div id="bar-chart"></div>
+            <div id="info-box"></div>
+        </div>
     </div>
 </div>
 
