--- a/main.html
+++ b/main.html
@@ -91,7 +91,7 @@
 
         <span id="driver-names"></span>
 
-        <div id="driver-details">
+        <div id="driver-details" class="driver-border">
             <svg width="300" height="300" id="image"></svg>
             <svg width="1100" height="300" id="details"></svg>
         </div>
