added team nationality, text display in teams

--- a/main.html
+++ b/main.html
@@ -68,6 +68,7 @@
         <div id="range-label">1970 - 1980</div>
         <div id="bubble-chart"></div>
         <div id="team-template" class="teamWrapper">
+            <h2>Click on the team name to see the magic</h2>
             <div id="bar-chart"></div>
             <div id="info-box"></div>
         </div>
