about and circuit label

--- a/about.html
+++ b/about.html
@@ -38,11 +38,21 @@
 			</div>
 		</div>
 	</nav>
-	<h4 id="content">As ardent fans of Formula-1 Racing, the three of us, Vinu Sreenivasan, Harshini Keerthi Vasan and Sanjana Aravindan decided to visulaize and find out the best teams in the Formula-1 racing history. Formula-1 fandom has increased tremendously over the years, and the three of us have been lucky to witness the growth of players and teams from different parts of the world. We hope our project gives a good insight about the drivers, circuits and the best teams of Formula-1 racing. 
+	<h4 id="content">As ardent fans of Formula-1 Racing, the three of us, Vinu Sreenivasan, Harshini Keerthi Vasan and Sanjana Aravindan decided to visualize and find out interesting facts about the best teams and the best players in the Formula-1 racing history. Formula-1 fandom has increased tremendously over the years, and the three of us have been lucky to witness the growth of players and teams from different parts of the world. We hope our project gives a good insight about the drivers, circuits and the best teams of Formula-1 racing. 
 	<br>
 	<br>
 
-To launch our visualization, simply click the home button on the navigation bar and click the get started button. <!--Select a player, to see his summary and ratings in different attributes, scroll through the timeline, and to compare the performance over the years with another player, search and select the player(s) from the list . The color codings help differentiate the players from one another, the color of the player name added and the line help relate the same player. When we wish to compare a lot of players and are interested in specific years rather than the while timeline, one can brush along the x-axis timeline and see the bar charts with more emphasis on the ratings for that particular attribute. Feel Free to add as many players as possible to the line chart and brush on the x-axis timeline to zoom into the specific years. Although a player has been performing really well in a specific attribute, he might be lagging other attributes of the game and that can be seen clearly in the bar charts. Hovering over the bars or the lines will show the details that are specific to the visualization and get more insights--></h4>
+To launch our visualization, simply click the home button on the navigation bar and click the "Get Started" button. The main page will show up with four tabs linking to Teams, Drivers, Circuits and Demo respectively. The Teams tab will have interesting visualizations about various teams in the Formula-1 history. The Drivers tab would highlight the specifics of a particular driver selected. The Circuits tab would give us an overview about all the F1 race circuits in the world. The Demo tab provides a link to the youtube screencast of our project. So what are you guys waiting for, go ahead and enjoy the visualization ! :)
+
+<br>
+<br>
+
+Our Process book gives a detailed analysis about the design choices that we had to make for this project. It also highlights the various problems that we faced during the course of this project and the methods that helped us in fixing them. You can find the link to the process book below.  
+<br>
+<br>
+
+<p> Process Book :
+<a href = "https://github.com/HarshiniVasu/Formula-1-Stats/blob/master/Process%20Book.pdf"> https://github.com/HarshiniVasu/Formula-1-Stats/blob/master/Process%20Book.pdf</a> </p></h4>
 
 
 
