--- a/main.html
+++ b/main.html
@@ -66,7 +66,9 @@
         <h2>Click and drag the bar to select a range</h2>
         <div id="slider-container"></div>
         <div id="range-label">1970 - 1980</div>
-        <div id="bubble-chart"></div>
+        <div id="bubble-chart">
+            <div id="hover-text"></div>
+        </div>
         <div id="team-template" class="teamWrapper">
             <h2 id="magicText">Click on the team name to see the magic</h2>
             <div id="bar-chart"></div>
