--- a/main.html
+++ b/main.html
@@ -134,7 +134,7 @@
 
 <div id="Demo" class="tabcontent">
     <iframe id="demo-video" width="800" height="500"
-            src="https://www.youtube.com/embed/CwiXTO2AIbk">
+            src="https://youtu.be/44OZ1eZ4AP0">
     </iframe>
 </div>
 </body>
