youtube link fix

--- a/main.html
+++ b/main.html
@@ -133,12 +133,9 @@
 </div>
 
 <div id="Demo" class="tabcontent">
-
-    <p> YouTube Screen cast link :
-        <a href = "https://youtu.be/44OZ1eZ4AP0"> https://youtu.be/44OZ1eZ4AP0</a> </p>
-    <!--<iframe id="demo-video" width="800" height="500"-->
-            <!--src="https://youtu.be/44OZ1eZ4AP0">-->
-    <!--</iframe>-->
+    <iframe id="demo-video" width="800" height="500"
+            src="https://www.youtube.com/embed/44OZ1eZ4AP0" frameborder="0" allowfullscreen>
+    </iframe>
 </div>
 </body>
 </html>
