--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ Our Process book gives a detailed analysis about the design choices that we had 
 
 
 	<script
-  	src="http://code.jquery.com/jquery-2.1.4.js"
+  	src="https://code.jquery.com/jquery-2.1.4.js"
   	integrity="sha256-siFczlgw4jULnUICcdm9gjQPZkw/YPDqhQ9+nAOScE4="
   	crossorigin="anonymous"></script>
 
