--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     </p>
 
 	<script
-  	src="http://code.jquery.com/jquery-2.1.4.js"
+  	src="https://code.jquery.com/jquery-2.1.4.js"
   	integrity="sha256-siFczlgw4jULnUICcdm9gjQPZkw/YPDqhQ9+nAOScE4="
   	crossorigin="anonymous"></script>
 
