--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	</div>
 	</div>
 	<script
-  	src="http://code.jquery.com/jquery-2.1.4.js"
+  	src="https://code.jquery.com/jquery-2.1.4.js"
   	integrity="sha256-siFczlgw4jULnUICcdm9gjQPZkw/YPDqhQ9+nAOScE4="
   	crossorigin="anonymous"></script>
 
